--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "homepage": "https://github.com/ConectaBit/bia-api#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
+    "mongoose": "^5.5.12",
+    "node-fetch": "^2.6.0",
+    "request": "^2.88.0"
   }
 }
